# nerf-shape-from-silhouette

./: .gitignore  ConfigExperimentPipelines.py  DemoPipeline.py  camera-path-480-2positions.json  camera_path.json  environment.yml  main.py  readme.md
alex-silhouette-model/: pyproject.toml
alex-silhouette-model/alex_silhouette_model/: custom_config.py  custom_datamanager.py  custom_model.py  custom_pipeline.py
alex-silhouette-model/alex_silhouette_model/fields/: silhouette_field.py
alex-silhouette-model/alex_silhouette_model/loss/: custom_losses.py
alex-silhouette-model/alex_silhouette_model/renderer/: custom_renderers.py
custom-nerf-model/: pyproject.toml
custom-nerf-model/silhouette_method/: template_config.py  template_datamanager.py  template_field.py  template_model.py  template_pipeline.py
davi-export-method/: export_commands.txt
davi-silhouette-model/: pyproject.toml
davi-silhouette-model/davi_silhouette_method/: custom_config.py  custom_datamanager.py  custom_dataparser.py  custom_model.py  custom_pipeline.py
davi-silhouette-model/davi_silhouette_method/field/: custom_fields.py
davi-silhouette-model/davi_silhouette_method/renderer/: custom_renderers.py
evals/: 2024-07-05_200618_MSE.json  2024-07-05_202858_SmoothL1.json  2024-07-05_204016_KLDiv.json  2024-07-05_205203_Charbonnier.json  2024-07-05_211423_Tversky.json  2024-07-26_094159_l1_r5_o0_oSig_wPri.json  2024-07-26_102509_l1_r5_o5_oSig_wPri.json  2024-07-26_103930_l1_r10_o5_oSig_wPri.json  2024-07-26_113708_l1_r15_o0_oSig.json  2024-07-26_120612_l1_r10_o5_oSig.json  2024-07-26_122049_l1_r15_o5_oSig.json  2024-07-26_160701_l1_r15_o5.json  2024-07-26_163151_l1_pure.json  (+10 more)
(+40 files in other folders)
