[project]
name = "custom-nerf-model"
description = "Custom Nerfstudio method for creating 3D Meshed out of silhouette images. Based on nerfstudio-method-template"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["silhouette_method*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
silhouette-method = 'silhouette_method.template_config:silhouette_method'
