[project]
name = "davi-silhouette-method"
description = "davi branch: Custom Nerfstudio method for creating 3D Meshed out of silhouette images. Based on nerfstudio-method-template"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"]

[tool.setuptools.packages.find]
include = ["davi_silhouette_method*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
davi-silhouette-method = 'davi_silhouette_method.custom_config:davi_silhouette_model'